# Kcalsculadora

./: .gitignore  LICENSE  LICENSE.txt  README.md  app.R  calcular_cals.R  calcular_semanas_necesarias.R  creditos.R  docker-compose.yml  macros.R
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend-diet/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend-diet/app/: constants.py  main.py  schemas.py  semana.py
backend-diet/app/graph/: build.py  cantidades.py  nodes.py  state.py
backend-diet/app/pdf/: generate.py  template.html
backend-diet/app/rag/: load_products.py  manifest.py  vectorstore.py
backend-diet/app/rag/data/: carrefour.csv  dia.csv  lidl.csv  mercadona.csv
backend-diet/app/routers/: diet.py
backend-diet/scripts/: build_dataset.py  build_vectorstore.py  check_vectorstore.py
backend-diet/tests/: conftest.py  test_cantidades.py  test_chef.py  test_composer.py  test_pdf.py  test_retriever.py  test_semana.py  test_validator.py
backend-diet/vectorstore/: manifest.json
backend-diet/vectorstore/chroma/4b40b4d3-8520-438c-b6b9-ab788850ffe2/: index_metadata.pickle
backend/app/: constants.py  main.py  schemas.py
backend/app/core/: __init__.py  avisos.py  calorias.py  ganancia.py  get.py  grasa.py  imc.py  macros.py  peso_objetivo.py  plan.py  semanas.py  tmb.py
backend/app/routers/: __init__.py  calculos.py  plan.py
frontend/: .dockerignore  .npmrc  Dockerfile  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  api.ts  constants.ts  index.css  (+2 more)
(+22 files in other folders)
